--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.4",
     "angular-star-rating": "^4.0.0-beta.3",
     "css-star-rating": "^1.2.4",
+    "google-libphonenumber": "^3.2.5",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
